--- a/extensions/chrome/manifest.json
+++ b/extensions/chrome/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
 
-  "name": "Quantum A.I.",
+  "name": "Quantum.ai",
   "description": "Quantum Artifical Intelligence Google Chrome Extension",
   "version": "1.0",
 
@@ -11,14 +11,32 @@
             "128": "common/icons/electronic_brain.png"
           },
 
+  "browser_action": {
+            "default_popup": "popup.html"
+  },
+
   "background": {
           "scripts": ["background.js"]
         },
 
+  "content_scripts": [
+          {
+            "matches": ["http://*/*", "https://*/*"],
+            "js": ["common/js/inject.js"],
+            "run_at": "document_end",
+            "all_frames": true,
+            "match_about_blank": true
+          }
+  ],
+
+  "web_accessible_resources": ["texteditor.html"],
+
   "permissions": [
      "contextMenus",
+     "activeTab",
      "tabs",
-     "clipboardRead"
+     "clipboardRead",
+     "<all_urls>"
    ]
 
 }
