--- a/extensions/chrome/manifest.json
+++ b/extensions/chrome/manifest.json
@@ -22,7 +22,7 @@
   "content_scripts": [
           {
             "matches": ["http://*/*", "https://*/*"],
-            "js": ["common/js/inject.js"],
+            "js": ["assets/jquery/jquery-3.1.1/jquery-3.1.1.min.js", "common/js/inject.js"],
             "run_at": "document_end",
             "all_frames": true,
             "match_about_blank": true
