--- a/extensions/chrome/manifest.json
+++ b/extensions/chrome/manifest.json
@@ -22,12 +22,13 @@
   "content_scripts": [
           {
             "matches": ["http://*/*", "https://*/*"],
-            "js": ["assets/jquery/jquery-3.1.1/jquery-3.1.1.min.js","content.js"],
+            "css" : ["common/css/quantum-core.css"],
+            "js": ["assets/jquery/jquery-3.1.1/jquery-3.1.1.min.js", "common/js/quantum-core.js", "content.js"],
             "run_at": "document_end"
           }
   ],
 
-  "web_accessible_resources": [ "" ],
+  "web_accessible_resources": [ "frame.html" ],
 
   "permissions": [
      "contextMenus",
