--- a/extensions/chrome/manifest.json
+++ b/extensions/chrome/manifest.json
@@ -21,14 +21,15 @@
 
   "content_scripts": [
           {
-            "matches": ["http://*/*", "https://*/*"],
+            "matches": ["*://*/*"],
             "css" : ["common/css/quantum-core.css"],
-            "js": ["assets/jquery/jquery-3.1.1/jquery-3.1.1.min.js", "common/js/quantum-core.js", "content.js"],
-            "run_at": "document_end"
+            "js": ["assets/jquery/jquery-3.1.1/jquery-3.1.1.min.js", "content.js"],
+            "run_at": "document_end",
+            "all_frames": true
           }
   ],
 
-  "web_accessible_resources": [ "frame.html" ],
+  "web_accessible_resources": [ "texteditor.html" ],
 
 
   "permissions": [
